# calima

./: .gitignore  Cargo.toml  LICENSE.md  README.md  out.txt
calima/: Cargo.toml
calima/src/: analyze.rs  ast.rs  ast_common.rs  calima_parser.lalrpop  common.rs  compiler.rs  errors.rs  ir.rs  lexer.rs  lib.rs  modules.rs  names.rs  parser.rs  prelude.rs  string_interner.rs  symbol_names.rs  token.rs  typechecker.rs  typed_ast.rs  types.rs  util.rs
calima/src/formatting/: context.rs  mod.rs  tree.rs
calima/src/parsing/: calima_parser.lalrpop  lexer.rs  mod.rs  names.rs  parser.rs  string_interner.rs  token.rs
calima/src/test_snippets/: factorial.ca
calima/src/typechecker/: env.rs  environment.rs  ir_lowering.rs  mod.rs  prelude.rs  substitution.rs  symbol_table.rs  type_context.rs  type_resolution.rs
calima/tests/dumped_ast/: complex_id.ca  factorial.ca  hello_world.ca  id.ca  list.ca  list_regions.ca  math.ca  typed.ca
calima/tests/ir_programs/: complex_id.ca  complex_id.ir  factorial.ca  factorial.ir  id.ca
calima/tests/parsed/: class_instance.ca  complex_id.ca  factorial.ca  hello_world.ca  id.ca  list.ca  list_regions.ca  math.ca  shadowing.ca  typed.ca
calima/tests/parsed_programs/: complex_id.ca  factorial.ca  hello_world.ca  id.ca  list.ca  math.ca  shadowing.ca  typed.ca
calima/tests/test_programs/: id.ca  list.ca  math.ca  shadowing.ca  typed.ca
calima/tests/typechecking/: factorial.ca  id.ca  simple.ca
calimac/: Cargo.toml
calimac/src/: main.rs
examples/: typed.ca
examples/basic/: class_instance.ca  complex_id.ca  factorial.ca  id.ca  (+6 more)
(+2 files in other folders)
