[package]
name = "calima"
version = "0.1.0"
authors = ["SpacialCircumstances <SpacialCircumstances@users.noreply.github.com>"]
edition = "2018"

[build-dependencies]
lalrpop = "0.19.8"

[dev-dependencies]
goldenfile = "1.4.3"

[dependencies]
lalrpop-util = "0.19.8"
codespan-reporting = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"